depends.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-architecture
  labels:
    app.kubernetes.io/name: ingress-architecture
    app.kubernetes.io/part-of: ingress-architecture
