nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: ingress-architecture
spec:
  selector:
    matchLabels:
      run: nginx-app
  replicas: 2
  template:
    metadata:
      labels:
        run: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx
        ports:
        - containerPort: 8080
