nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-default-backend
  namespace: ingress-architecture
  labels:
    run: nginx-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nginx-app
