nlb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-architecture
  namespace: ingress-architecture
  labels:
    app.kubernetes.io/name: ingress-architecture
    app.kubernetes.io/part-of: ingress-architecture
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-architecture
    app.kubernetes.io/part-of: ingress-architecture
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
